# codeflix

./: .gitignore  .gitlab-ci.yml  DESCRIPTION.md  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
codeflix/: manage.py  runtests.py  utils.py
codeflix/DjangoTools/: tools.py
codeflix/IrcBot/: bot.py  config.example.json
codeflix/api/: api.py  test.py  utils.py
codeflix/codeflix/: admin.py  context_processors.py  forms.py  models.py  secrets.py.example  settings.py  settings_local.py.example  settings_local_example.py  tokens.py  urls.py  views.py  wsgi.py
codeflix/codeflix/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_profile_cfuser.py
codeflix/codeforces/: admin.py  models.py
codeflix/codeforces/migrations/: 0001_initial.py  0002_contest.py  0003_contest_useful.py  0004_auto_20200128_0025.py  0005_auto_20200128_0027.py  0006_codeforcesuser_rating.py  0007_auto_20200128_1419.py  0008_codeforcesuser_max_rank.py  0009_auto_20200128_1500.py  0010_auto_20200128_1501.py  0011_problem.py  0012_auto_20200201_0124.py  0013_contest_problems.py  0014_attempt.py  0015_auto_20200201_0300.py  0016_auto_20200201_0430.py  0017_auto_20200201_0432.py  0018_auto_20200201_0509.py  0019_remove_codeforcesuser_database_user.py  0020_codeforcesuser_recommended_problems.py
codeflix/graph/: generate_graph.py  test.py
codeflix/myapi/: serializers.py  urls.py  views.py
codeflix/recommendation/: recommendation.py  test.py
codeflix/templates/: base.html  index.html
utils/: codeflix_nginx.conf.example  codeflix_uwsgi.ini.example
(+24 files in other folders)
