[metadata]
name = codeflix
version = 1.0
description = Recommendation app for codeforces.
author = "Guillaume Aubian <guillaume.aubian@gmail.com>, Maxime Bombar <bombar+codeflix@crans.org>"
url = https://gitlab.crans.org/bombar/codeflix.git
classifiers =
	Framework :: Django
	Framework :: Django :: 2.2
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
install_requires =
	Django >= 2.2
	psycopg2

[options.packages.find]
exclude =
	codeflix.tests

[bdist_wheel]
universal = 1
